--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "publishConfig" : {
-    "registry" : "http://nexus.dev.chelizitech.com/nexus/content/repositories/npm/"
+  "publishConfig": {
+    "registry": "http://nexus.dev.chelizitech.com/nexus/content/repositories/npm/"
   },
   "dependencies": {
-
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
