--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
@@ -23,9 +25,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21",
     "core-js": "^2.6.5",
-    "element-ui": "^2.7.2",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.3"
+    "element-ui": "^2.7.2"
   },
   "eslintConfig": {
     "root": true,
