--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-ueditor-wrap": "^2.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
