--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "ctl-web-module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "publish": "npm publish",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
   "publishConfig": {
     "registry": "http://nexus.dev.chelizitech.com/nexus/content/repositories/npm/"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.3",
-    "vue-ueditor-wrap": "^2.4.1"
-  },
-  "devDependencies": {
+    "vue-ueditor-wrap": "^2.4.1",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
