--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build_js:
   tags:
     - global
   only:
-    - dev
+    - master
 
 build_image:
   image: registry.dev.chelizitech.com/public/citools:1
