--- a/Caddyfile
+++ b/Caddyfile
@@ -16,6 +16,6 @@ rewrite /ui/module/ {
     to {path} {path}/ /ui/module/
 }
 
-rewrite /ui/docs/{
+rewrite /ui/module/docs/{
     to {path} {path}/ /ui/docs/
 }
