--- a/Caddyfile
+++ b/Caddyfile
@@ -16,6 +16,6 @@ rewrite /ui/module/ {
     to {path} {path}/ /ui/module/
 }
 
-rewrite /ui/module/docs/.vuepress/ {
-    to {path} {path}/ /ui/module/docs/.vuepress/
+rewrite /ui/docs/ {
+    to {path} {path}/ /ui/docs/
 }
