--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
+  "dependencies": {
+
+  },
   "devDependencies": {
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.3",
     "vue-ueditor-wrap": "^2.4.1",
+    "element-ui": "^2.7.2",
+    "vuepress": "^0.14.10",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
     "babel-eslint": "^10.0.1",
     "core-js": "^2.6.5",
-    "element-ui": "^2.7.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuepress": "^0.14.10"
+    "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
     "root": true,
