--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-
+    "axios": "^0.18.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
