--- a/package.json
+++ b/package.json
@@ -25,8 +25,15 @@
     "@vue/cli-service": "^3.1.1",
     "babel-eslint": "^10.0.1",
     "core-js": "^2.6.5",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
